Added Share Modal to Map View Added Sharing Buttons Moved Buttons on Map View

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Buffalo Open GIS is a system developed to help individuals and community organizations map their data enabling positive impacts on the city of Buffalo.">
-    <meta name="author" content="Clark Dever, Nick Gianadda - AlgonquinStudios.com">
+    <meta name="author" content="The Team at VCAMP.co">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="shortcut icon" href="assets/ico/favicon.png">
@@ -136,7 +136,7 @@
   <script type="text/javascript" src="assets/js/libs/smoothscroll.js"></script>
 	<script type="text/javascript" src="assets/js/libs/jquery-func.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-handsontable/0.10.2/jquery.handsontable.full.min.js"></script>
-      
+
 
 
 	<!--Angular Libraries -->
@@ -200,5 +200,15 @@
     ga('send', 'pageview');
 
   </script>
+
+  <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=1495779517351463&version=v2.0";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
+
   </body>
 </html>
