Fixed Nav URLs to they go to the right places.

--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="/#home" class="smoothScroll">Home</a></li>
-        			<li> <a href="/#about" class="smoothScroll"> About</a></li>
+              <li><a href="#/#home" class="smoothScroll">Home</a></li>
+        			<li> <a href="#/#about" class="smoothScroll"> About</a></li>
         			<li> <a ng-show-auth="" class="dropdown-toggle ng-cloak" data-toggle="dropdown"> Maps<span class="caret"></span></a>
                         <ul class="dropdown-menu" ng-controller="UrlGenerator" role="menu">
                           <li><a ng-click="getURL()">Create Map</a></li>
                           <li><a href="#/account">Your Maps</a></li>
-                          <li><a href="#maps">Most Popular</a></li>
+                          <li><a href="#/#maps">Most Popular</a></li>
                           <li><a href="#/allmaps">All</a></li>
                         </ul>
                     </li>
-        			<li> <a href="/#team" class="smoothScroll"> Team</a></li>
-        			<li> <a href="#contact" class="smoothScroll"> Contact</a></li>
+        			<li> <a href="#/#team" class="smoothScroll"> Team</a></li>
+        			<li> <a href="#/#contact" class="smoothScroll"> Contact</a></li>
               <li class="ng-cloak"> <a ng-hide-auth="" href="#/login" class="smoothScroll">Log in</a></li>
               <li class="dropdown ng-cloak">
                 <a ng-show-auth="" class="dropdown-toggle ng-cloak" data-toggle="dropdown">Account <span class="caret"></span></a>
