Updated Youtube video in footer. Commented on Magic Nick Variable.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					</p>
 				</div><!-- col -->
 				<div class="col-lg-4">
-					<p><iframe width="320" height="180" src="https://www.youtube.com/embed/lM_McLNBZxo?feature=player_detailpage" frameborder="0" allowfullscreen></iframe></p>
+					<p><iframe width="320" height="180" src="//www.youtube.com/embed/S3oO53t8c00" frameborder="0" allowfullscreen></iframe></p>
 				</div><!-- col -->
 				<div class="col-lg-4">
 					<h3>Help Us</h3>
